feat: :sparkles: Adding the others campers functions
